41154 fixed logo position and full build no should be visible in sidebar.
Workitems:
#41154 Company logo & Build number is not available in Negotiation screen
git-tfs-id: [https://dev.azure.com/inatech]$/Shiptech10/Dev/Frontend;C35023

--- a/ShipTech10/app/assets/global/css/components.css
+++ b/ShipTech10/app/assets/global/css/components.css
@@ -44,7 +44,7 @@ body {
     padding: 0px !important;
     margin: 0px !important;
     direction: "ltr";
-    font-size: 12px;
+    font-size: 13px !important;
 }
 
 
@@ -29396,3 +29396,6 @@ Color library demo
     background: rgba(238, 238, 238, 0.9);
     color: #333;
 }
+.bottom-menu-item:hover{
+    background-color: #21282e;
+    }
